--- a/app/styles/main_styles.css
+++ b/app/styles/main_styles.css
@@ -183,11 +183,13 @@ button:hover, a:hover {
   display: grid;
   grid-auto-flow: row;
   justify-items: center;
-  padding: 0;
   align-items: start;
   align-content: start;
+  margin-top: 0px;
   grid-area: main;
+  padding: 0 10px;
 }
+
 
 /*/End Modules////////////////////////////////////
 //////////////////////////////////////////////////
@@ -234,21 +236,6 @@ button:hover, a:hover {
 
 /*///////////////////////////////////////////////end navlist/
 /////////////////////////////////////////////////////////////
-/////////////////////////////////////////////////////////////
-///////////////////////////////////////////////start posts/*/
-
-@media(min-width:750px){
-  #mainModule {
-    margin-top: 0px;
-  }
-  #homeModule {
-    padding-top: 0px;
-  }
-}
-
-
-/*End Posts///////////////////////////////////////
-//////////////////////////////////////////////////
 //////////////////////////////////////////////////
 ///////////////////////////////////End Sections/*/
 
